[tool.poetry]
name = "openapi-vultr-test"
version = "0.1.0"
description = ""
authors = ["ablades <ablades@vultr.com>"]

[tool.poetry.dependencies]
python = "^3.8"
openapi-client = {path = "openapi-client/dist/openapi_client-1.0.0-py3-none-any.whl"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

